--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     
 </head>
-<body style="background-color: white;">
+<body >
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
    
   
@@ -62,17 +62,17 @@
 
 <div class="classicLogo" align="center" id="classicCof" >Классика</div>
 <div class="classic" >
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(6313304092.jpg)"></div><div class="description" align="center"><div class="coffeeName">Двойной эспрессо</div><div class="coffeeDescription"><div>280 мл - 120 руб.</div><div class="titata">Простота - это сила! Настоящий феррари для вашего мозга</div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(6313304092.jpg)"></div><div class="description" align="center"><div class="coffeeName">Двойной эспрессо</div><div class="coffeeDescription"><div>280 мл - 120 руб.</div><div class="titata">Простота - это сила. Реально феррари для вашего мозга</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(americano.jpg)"></div><div class="description" align="center"><div class="coffeeName">Американо</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>380 мл - 180 руб.</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(капуч.jpg)"></div><div class="description" align="center"><div class="coffeeName">Капучино</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>380 мл - 180 руб.<br>480 мл - 230 руб.</div><div class="titata"></div></div></div></div>
  
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(b9868966d39ff1b79559ea13a5c55116.jpg)"></div><div class="description" align="center"><div class="coffeeName">Латте</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>380 мл - 180 руб.<br>480 мл - 230 руб.</div><div class="titata">Кофе, который нашел свою любовь в молоке. Романтичный и нежный, как итальянский фильм.</div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(flat.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Флэт Уайт</div><div class="coffeeDescription"></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(flat.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Флэт Уайт</div><div class="coffeeDescription"><div>280 мл - 160 руб.<br>480 мл - 260 руб.</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(c0b126272225320177a0c1a58a8682b5926dbe54.jpg)"></div><div class="description" align="center"><div class="coffeeName">Латте Макиато</div><div class="coffeeDescription"></div></div></div>
 
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(ebe121e3-332f-41a8-af96-0ebfc10fb8c6.jpg)"></div><div class="description" align="center"><div class="coffeeName">Моккачино</div><div class="coffeeDescription"><div>380 мл - 290 руб.</div><div class="titata">Шоколадная бомба! Вкуснее, чем пирожное, и сильнее, чем шоколадный фонтан.</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(w09zkvl5qqu1z0xe7baccmft9k3kezz1.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Гляссе</div><div class="coffeeDescription"><div></div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(c63e5e140b6f5747c6a893a650ef0949.jpeg)"></div><div class="description" align="center"><div class="coffeeName">РАФ</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div style="background-color:rgb(94, 21, 33); color:white; ;border-top:dashed 5px white;bottom: 0px;"><a href="RAF.html" >НАЖМИТЕ ЧТОБЫ<br>ПОСМОТРЕТЬ<br>ВСЕ РАФЫ,,,</a></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(c63e5e140b6f5747c6a893a650ef0949.jpeg)"></div><div class="description" align="center"><div class="coffeeName">РАФ</div><div class="coffeeDescription"><div>380 мл - 290р</div><div style="margin-top:4%; background-color:rgb(94, 21, 33); color:white; ;border-top:dashed 5px white;bottom: 0px;"><a href="RAF.html" >НАЖМИТЕ ЧТОБЫ<br>ПОСМОТРЕТЬ<br>ВСЕ РАФЫ,,,</a></div></div></div></div>
 
 </div>
 
@@ -80,9 +80,9 @@
 
 
 <div class="classicLogo" align="center" id="season">Сезонные</div>
-<div class="classic">
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(1679375610_bogatyr-club-p-laim-na-chernom-fone-instagram-81.jpg)"></div><div class="description" align="center"><div class="coffeeName">Мохито</div><div class="coffeeDescription" ><div>100 мл - 2000р<br>300 мл - 99999р<br>400 мл - </div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(IMG_1803-scaled.jpg)"></div><div class="description" align="center"><div class="coffeeName">Клубничный мохито</div><div class="coffeeDescription"><div>100 мл - 2000р<br>300 мл - 99999р<br>400 мл - </div><div class="titata"></div></div></div></div>
+<div class="classic2">
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(1679375610_bogatyr-club-p-laim-na-chernom-fone-instagram-81.jpg)"></div><div class="description" align="center"><div class="coffeeName">Мохито</div><div class="coffeeDescription" ><div>290р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(IMG_1803-scaled.jpg)"></div><div class="description" align="center"><div class="coffeeName">Клубничный мохито</div><div class="coffeeDescription"><div>290р</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(240143f8bd82498ad9e63905ee58d57e.jpg)"></div><div class="description" align="center"><div class="coffeeName">Кофейный лимонад</div><div class="coffeeDescription">100 мл - 2000р<br>300 мл - 99999р<br>400 мл - </div></div></div>
    
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(shmel.jpg)"></div><div class="description" align="center"><div class="coffeeName">Шмель</div><div class="coffeeDescription"><div>280 мл - 120 руб.</div><div class="titata">Простота - это сила! Ощутите чистый вкус кофе, без лишних заморочек.</div></div></div></div>
@@ -93,27 +93,34 @@
 
 
 <div class="classicLogo" align="center" id="milkshake">Молочные коктейли</div>
-<div class="classic" style="height: 75%;row-gap: 1%;">
-        <div class="classicCard" ><div class="imgCoffee" style="background-image: url(1645032597_32-balthazar-club-p-kokteil-morozhenoe-35.jpg)"></div><div class="description" align="center"><div class="coffeeName">Коктейль с мороженым</div><div class="coffeeDescription"><br>300 мл - 99999р<br>400 мл - </div></div></div>
-        <div class="classicCard" ><div class="imgCoffee" style="background-image: url(koktel.jpg)"></div><div class="description" align="center"><div class="coffeeName">Звездные войны</div><div class="coffeeDescription"><br>300 мл - 99999р</div></div></div>
-        <div class="classicCard" ><div class="imgCoffee" style="background-image: url(4909_big.jpg)"></div><div class="description" align="center"><div class="coffeeName">Биливикс</div><div class="coffeeDescription"><br>300 мл - 99999р</div></div></div>
+<div class="classic2">
+        <div class="classicCard" ><div class="imgCoffee" style="background-image: url(koktel.jpg)"></div><div class="description" align="center"><div class="coffeeName">Звездные войны</div><div class="coffeeDescription"><div>190р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard" ><div class="imgCoffee" style="background-image: url(1645032597_32-balthazar-club-p-kokteil-morozhenoe-35.jpg)"></div><div class="description" align="center"><div class="coffeeName">Коктейль с мороженым</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard" ><div class="imgCoffee" style="background-image: url(4909_big.jpg)"></div><div class="description" align="center"><div class="coffeeName">Биливикс</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
  
-        <div class="classicCard" style=" width:30%; height:70%;"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Горячий шоколад</div><div class="coffeeDescription">380 мл - 235 руб.</div></div></div>
-        <div class="classicCard" style=" width:30%;height:70%;"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Какао</div><div class="coffeeDescription">380 мл - 180 руб.</div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(1645474138_32-balthazar-club-p-goryachii-shokolad-34.jpg)"></div><div class="description" align="center"><div class="coffeeName">Горячий шоколад</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(cacao.png)"></div><div class="description" align="center"><div class="coffeeName">Какао</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
    
 </div>
 
 
 <div class="classicLogo" align="center" id="tea">Чай</div>
 <div class="classic">
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Чёрный</div><div class="coffeeDescription">100 мл - 2000р<br>300 мл - 99999р<br>400 мл - </div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Чабрец с мятой</div><div class="coffeeDescription">100 мл - 2000р<br>300 мл - 99999р<br>400 мл - </div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ромашка-шиповник</div><div class="coffeeDescription">100 мл - 2000р<br>300 мл - 99999р<br>400 мл - </div></div></div>
-    </div>
-    <div align="center" style="font-family:Incendio; font-size: 3vw;margin: 1% 5% 0 5%;">Матча</div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Матча</div><div class="coffeeDescription">100 мл - 2000р<br>300 мл - 99999р<br>400 мл - </div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Латте</div><div class="coffeeDescription">100 мл - 2000р<br>300 мл - 99999р<br>400 мл - </div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Американо</div><div class="coffeeDescription">100 мл - 2000р<br>300 мл - 99999р<br>400 мл - </div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Чёрный</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Чабрец с мятой</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ромашка-шиповник</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(veselyFruct.png)"></div><div class="description" align="center"><div class="coffeeName">Веселый фрукт</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(16390a9ec98111ec959fe43d1a17f1f9_6a68b924e6ae11ec887de43d1a180a17.jpg)"></div><div class="description" align="center"><div class="coffeeName">Малиновое суфле</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(ww-02-0.jpg.jpg)"></div><div class="description" align="center"><div class="coffeeName" style="height:auto">Ройбош для маленькой капризки</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(veselyFruct.png)"></div><div class="description" align="center"><div class="coffeeName">Веселый фрукт</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Чабрец с мятой</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ромашка-шиповник</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+      </div>
+    <div align="center" class="classicLogo">Матча</div>
+    <div class="classic2" >
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(recepty-chaya-latte-v-domashnix-usloviyax-kak-gotovit-chaj-s-pryanostyami-3-1024x1002.jpg)"></div><div class="description" align="center"><div class="coffeeName">Матча</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(unnamed-file.jpg)"></div><div class="description" align="center"><div class="coffeeName">Фисташковая</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(blue.png)"></div><div class="description" align="center"><div class="coffeeName">Голубая</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
   
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName"></div><div class="coffeeDescription"></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName"></div><div class="coffeeDescription"></div></div></div>
