--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(ebe121e3-332f-41a8-af96-0ebfc10fb8c6.jpg)"></div><div class="description" align="center"><div class="coffeeName">Моккачино</div><div class="coffeeDescription"><div>380 мл - 290 руб.</div><div class="titata">Шоколадная бомба! Вкуснее, чем пирожное, и сильнее, чем шоколадный фонтан.</div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(w09zkvl5qqu1z0xe7baccmft9k3kezz1.jpeg)"></div><div class="description" align="center"><div class="coffeeName">Гляссе</div><div class="coffeeDescription"><div></div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(c63e5e140b6f5747c6a893a650ef0949.jpeg)"></div><div class="description" align="center"><div class="coffeeName">РАФ</div><div class="coffeeDescription"><div>380 мл - 290р</div><div style="margin-top:4%; background-color:rgb(94, 21, 33); color:white; ;border-top:dashed 5px white;bottom: 0px;"><a href="RAF.html" >НАЖМИТЕ ЧТОБЫ<br>ПОСМОТРЕТЬ<br>ВСЕ РАФЫ,,,</a></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(c63e5e140b6f5747c6a893a650ef0949.jpeg)"></div><div class="description" align="center"><div class="coffeeName">РАФ</div><div class="coffeeDescription"><div>380 мл - 290р</div><div style="margin-top:4%; background-color:rgba(94, 21, 33, 0.516); color:white; ;border:dashed 5px white;bottom: 0px;"><a href="RAF.html" >НАЖМИТЕ ЧТОБЫ<br>ПОСМОТРЕТЬ<br>ВСЕ РАФЫ,,,</a></div></div></div></div>
 
 </div>
 
@@ -106,9 +106,9 @@
 
 <div class="classicLogo" align="center" id="tea">Чай</div>
 <div class="classic">
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Чёрный</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Чабрец с мятой</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ромашка-шиповник</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(ih5euod7a17fet0t7ftcpn2rmuqdr7bq.jpg)"></div><div class="description" align="center"><div class="coffeeName">Чёрный</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(1181.970.jpg)"></div><div class="description" align="center"><div class="coffeeName">Чабрец с мятой</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(606c77d64f623a04e762893d04a995af.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ромашка-шиповник</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(veselyFruct.png)"></div><div class="description" align="center"><div class="coffeeName">Веселый фрукт</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(16390a9ec98111ec959fe43d1a17f1f9_6a68b924e6ae11ec887de43d1a180a17.jpg)"></div><div class="description" align="center"><div class="coffeeName">Малиновое суфле</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(ww-02-0.jpg.jpg)"></div><div class="description" align="center"><div class="coffeeName" style="height:auto">Ройбош для маленькой капризки</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
@@ -122,8 +122,8 @@
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(unnamed-file.jpg)"></div><div class="description" align="center"><div class="coffeeName">Фисташковая</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(blue.png)"></div><div class="description" align="center"><div class="coffeeName">Голубая</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
   
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName"></div><div class="coffeeDescription"></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName"></div><div class="coffeeDescription"></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(Pink-latte-la-bebida-caliente-de-betabel-que-promete-eliminar-el-insomnio_1.jpg)"></div><div class="description" align="center"><div class="coffeeName">Красная</div><div class="coffeeDescription"></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(maxresdefault.jpg)"></div><div class="description" align="center"><div class="coffeeName">Лавандовая</div><div class="coffeeDescription"></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName"></div><div class="coffeeDescription"></div></div></div>
 
 </div>
@@ -131,20 +131,17 @@
 
 
 <div class="classicLogo" align="center" id="avtor">Авторские напитки</div>
-<div class="classic">
 
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ностальгия</div><div class="coffeeDescription"><br>290 руб.</div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ягодная сказка</div><div class="coffeeDescription"><br>290 руб.</div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Синнабон</div><div class="coffeeDescription"><br>290 руб.</div></div></div>
+<div class="classic2">
 
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Сочный ананас</div><div class="coffeeDescription"><br>290 руб.</div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(nostalji.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ностальгия</div><div class="coffeeDescription"><br>290 руб.</div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(kvq99AnambY.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ягодная сказка</div><div class="coffeeDescription"><br>290 руб.</div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(sinnabone.jpg)"></div><div class="description" align="center"><div class="coffeeName">Синнабон</div><div class="coffeeDescription"><br>290 руб.</div></div></div>
+
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(8ff5f1cc4a5970e14611e6e1fbc2bf5a.jpg)"></div><div class="description" align="center"><div class="coffeeName">Сочный ананас</div><div class="coffeeDescription"><br>290 руб.</div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Тропический рай</div><div class="coffeeDescription"><br>290 руб.</div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Американо</div><div class="coffeeDescription">100 мл - 2000р<br>300 мл - 99999р<br>400 мл - </div></div></div>
  
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName"></div><div class="coffeeDescription"></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName"></div><div class="coffeeDescription"></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName"></div><div class="coffeeDescription"></div></div></div>
-
 </div>
     <!-- <div id="sliders">
     <div class="slider">
