--- a/index.html
+++ b/index.html
@@ -105,26 +105,30 @@
 
 
 <div class="classicLogo" align="center" id="tea">Чай</div>
-<div class="classic">
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(ih5euod7a17fet0t7ftcpn2rmuqdr7bq.jpg)"></div><div class="description" align="center"><div class="coffeeName">Чёрный</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(1181.970.jpg)"></div><div class="description" align="center"><div class="coffeeName">Чабрец с мятой</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(606c77d64f623a04e762893d04a995af.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ромашка-шиповник</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(veselyFruct.png)"></div><div class="description" align="center"><div class="coffeeName">Веселый фрукт</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(16390a9ec98111ec959fe43d1a17f1f9_6a68b924e6ae11ec887de43d1a180a17.jpg)"></div><div class="description" align="center"><div class="coffeeName">Малиновое суфле</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(ww-02-0.jpg.jpg)"></div><div class="description" align="center"><div class="coffeeName" style="height:auto">Ройбош для маленькой капризки</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(veselyFruct.png)"></div><div class="description" align="center"><div class="coffeeName">Веселый фрукт</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Чабрец с мятой</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Ромашка-шиповник</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
+<div class="classic4">
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(ih5euod7a17fet0t7ftcpn2rmuqdr7bq.jpg); background-size: 70%;"></div><div class="description" align="center"><div class="coffeeName">Рич (Кения)</div><div class="coffeeDescription"><div>220р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(1181.970.jpg); background-size: 70%;"></div><div class="description" align="center"><div class="coffeeName">Чабрец с мятой</div><div class="coffeeDescription"><div>220р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(melissa.jpg); background-size: 70%;"></div><div class="description" align="center"><div class="coffeeName">Мелисса-Мята</div><div class="coffeeDescription"><div>220р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(606c77d64f623a04e762893d04a995af.jpg); background-size: 70%;"></div><div class="description" align="center"><div class="coffeeName">Ромашка-шиповник</div><div class="coffeeDescription"><div>220р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(veselyFruct.png); background-size: 70%;"></div><div class="description" align="center"><div class="coffeeName">Веселый фрукт</div><div class="coffeeDescription"><div>220р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(16390a9ec98111ec959fe43d1a17f1f9_6a68b924e6ae11ec887de43d1a180a17.jpg); background-size: 70%;"></div><div class="description" align="center"><div class="coffeeName">Малиновое суфле</div><div class="coffeeDescription"><div>220р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(ww-02-0.jpg.jpg); background-size: 70%;"></div><div class="description" align="center"><div class="coffeeName" style="height:auto">Ройбос</div><div class="coffeeDescription"><div>220р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(r2vzqt5at2opuw8qi2vsjqaev1wq37sy.jpg); background-size: 70%;"></div><div class="description" align="center"><div class="coffeeName">Анчан</div><div class="coffeeDescription"><div>220р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(0a0d60ea26f6d903b27fdd4464ee7d92.jpg); background-size: 70%;"></div><div class="description" align="center"><div class="coffeeName">Эрл грей</div><div class="coffeeDescription"><div>220р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(0a0d60ea26f6d903b27fdd4464ee7d92.jpg); background-size: 70%;"></div><div class="description" align="center"><div class="coffeeName">Фруктовый арбуз</div><div class="coffeeDescription"><div>220р</div><div class="titata"></div></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(orig38.png); background-size: 70%;"></div><div class="description" align="center"><div class="coffeeName">Молочный улун с дыней</div><div class="coffeeDescription"><div>220р</div><div class="titata"></div></div></div></div>
+
       </div>
     <div align="center" class="classicLogo">Матча</div>
-    <div class="classic2" >
+    <div class="classic3" >
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(recepty-chaya-latte-v-domashnix-usloviyax-kak-gotovit-chaj-s-pryanostyami-3-1024x1002.jpg)"></div><div class="description" align="center"><div class="coffeeName">Матча</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(unnamed-file.jpg)"></div><div class="description" align="center"><div class="coffeeName">Фисташковая</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(blue.png)"></div><div class="description" align="center"><div class="coffeeName">Голубая</div><div class="coffeeDescription"><div>100 мл - 2000р</div><div class="titata"></div></div></div></div>
   
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(Pink-latte-la-bebida-caliente-de-betabel-que-promete-eliminar-el-insomnio_1.jpg)"></div><div class="description" align="center"><div class="coffeeName">Красная</div><div class="coffeeDescription"></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(maxresdefault.jpg)"></div><div class="description" align="center"><div class="coffeeName">Лавандовая</div><div class="coffeeDescription"></div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName"></div><div class="coffeeDescription"></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(FN_St-Patricks-Day-Mint-Schnapps-Shakes_s4x3.jpg)"></div><div class="description" align="center"><div class="coffeeName">Мятная</div><div class="coffeeDescription"></div></div></div>
+        <div class="classicCard"><div class="imgCoffee" style="background-image: url(smuzi-marakuyya-banan-.jpg)"></div><div class="description" align="center"><div class="coffeeName">Желтая</div><div class="coffeeDescription"></div></div></div>
 
 </div>
 
@@ -139,8 +143,7 @@
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(sinnabone.jpg)"></div><div class="description" align="center"><div class="coffeeName">Синнабон</div><div class="coffeeDescription"><br>290 руб.</div></div></div>
 
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(8ff5f1cc4a5970e14611e6e1fbc2bf5a.jpg)"></div><div class="description" align="center"><div class="coffeeName">Сочный ананас</div><div class="coffeeDescription"><br>290 руб.</div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Тропический рай</div><div class="coffeeDescription"><br>290 руб.</div></div></div>
-        <div class="classicCard"><div class="imgCoffee" style="background-image: url(caputch.jpg)"></div><div class="description" align="center"><div class="coffeeName">Американо</div><div class="coffeeDescription">100 мл - 2000р<br>300 мл - 99999р<br>400 мл - </div></div></div>
+
  
 </div>
     <!-- <div id="sliders">
