--- a/siropy.html
+++ b/siropy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главная</title>
+    <title>Сиропы</title>
     <link rel="stylesheet" href="styles.css">
     
 </head>
@@ -13,7 +13,7 @@
 
 
 <div class="am" ><a href="index.html" id="glavnaya" align="center"><b id="vernutsya">Вернуться<br>на<br>главную</b></a></div>
-<div class="classicLogo" align="center" id="classicCof" style="margin:3% 0;font-size: 4vw;">СИРОПЫ</div>
+<div class="classicLogo" align="center" id="classicCof" style="margin:3% 0;">СИРОПЫ</div>
 <div id="s" style="background-color: rgba(255, 255, 255, 0.564);">
     <div id="simg"><img src="437147.jpg"></div>
     <div id="stext" ><div>В каждом человеке намешано всего понемножку, а жизнь выдавливает из этой смеси что-нибудь одно на поверхность</div><div align="right" style="font-size: 3vw;"> <s style="font-size: 2vw;">ауф</s><br>Стругацкие</div></div>
@@ -149,7 +149,7 @@
   <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(z8w7n8bry9z8kxl5h1l4o9vs1j9gwdnu.png)"></div><div class="description2" align="center"><div class="coffeeName2">Лимонный пирог</div></div></div>
   </div>
   <div class="classicLogo2" align="center">Цветочные</div>
-  <div class="vseSiropy4">
+  <div class="vseSiropy5">
     <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(1b5pw35lw3tp961r67h3efkqbdjyp3jy.png)"></div><div class="description2" align="center"><div class="coffeeName2">Лаванда</div></div></div>
     <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(fu6f0d25j0enrig5wev9w07oveze71x2.png)"></div><div class="description2" align="center"><div class="coffeeName2">Жасмин</div></div></div>
     <div class="SiropCard" ><div class="imgCoffee2" style="background-image: url(09m74z09h3rwoub2b6hifkktlapfks80.png)"></div><div class="description2" align="center"><div class="coffeeName2">Гвоздика</div></div></div>
