--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="aslogan">Переживи понедельник,<br>выпей кофе.</div>
         <div id="shapka" >
             <a href="index.html#c" class="button" class="shapkaButton">Напитки разные</a>
-            <a href="milk.html" target="_blank" class="button" class="shapkaButton">Молоко</a>
+            <a href="https://www.youtube.com/watch?v=HIcSWuKMwOw" target="_blank" class="button" class="shapkaButton">Молоко</a>
             <a href="siropy.html" target="_blank" class="button" class="shapkaButton">Сиропы</a>
             <a href="cakes.html" target="_blank" class="button" class="shapkaButton">Десерты</a>
         </div>
@@ -107,7 +107,7 @@
 
 
 <div class="classicLogo" align="center" id="tea">Чай</div>
-<div class="classic4">
+<div class="classic5">
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(ih5euod7a17fet0t7ftcpn2rmuqdr7bq.jpg); background-size: 70%;"></div><div class="description" align="center"><div class="coffeeName">Рич (Кения)</div><div class="coffeeDescription"><div>220р</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(1181.970.jpg); background-size: 70%;"></div><div class="description" align="center"><div class="coffeeName">Чабрец с мятой</div><div class="coffeeDescription"><div>220р</div><div class="titata"></div></div></div></div>
         <div class="classicCard"><div class="imgCoffee" style="background-image: url(melissa.jpg); background-size: 70%;"></div><div class="description" align="center"><div class="coffeeName">Мелисса-Мята</div><div class="coffeeDescription"><div>220р</div><div class="titata"></div></div></div></div>
