--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
 <div id="b">
-    <div id="bimg"><img src="image/bestcoffee.jpg"></div>
+    <div id="bimg"><img src="images/bestcoffee.jpg"></div>
     <div id="bslogan">Тут типа чето душевно про кофe
         <br>................
         <br>................
